2006-07-29  John W. Eaton  <jwe@octave.org>

	* matrix.h: Delete to avoid conflict with liboctave/Matrix.h on
	case-insensitive filesystems.

	* version.h (OCTAVE_VERSION): Now 2.9.7+.

2006-07-28  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.9.7.
	(OCTAVE_API_VERSION): Now api-v20.
	(OCTAVE_RELEASE_DATE): Now 2006-07-28.

	* load-path.cc (path::do_add): Warn for trailing "//".

	* strfns.cc: Comment out some tests for snapshot.

2006-07-27  John W. Eaton  <jwe@octave.org>

	* defaults.cc (Vlocal_api_arch_lib_dir): New variable.
	(set_default_local_api_arch_lib_dir): New function.
	(install_defaults): Call it.
	(set_exec_path): Put Vlocal_api_arch_lib_dir in the list.
	* toplev.cc (localapiarchlibdir): Include it in the list.
	* defaults.h.in (OCTAVE_LOCALAPIARCHLIBDIR): Substitute here.

2006-07-26  John W. Eaton  <jwe@octave.org>

	* mex.cc (mxArray::as_octave_value (mxArray *)): New static function.
	(call_mex, mexPutVariable, mexCallMATLAB,
	mxArray_cell::as_octave_value, mxArray_struct::as_octave_value):
	Use static version of as_octave_value here.
	(mxArray_sparse::mxArray_sparse (const mxArray_sparse&)):
	Check pr, ir, and jc before calling memcpy.
	(mxArray_number::mxArray_number): Check pr before calling memcpy

	* mxarray.h (mxArray::as_octave_value (mxArray *)): Provide decl.
	(mxArray::as_octave_value): Now protected.

	* file-io.cc (Ffeof, Fferror): Use DEFUNX instead of DEFUN.

	* mex.cc (xfree): New function.
	(mex::free): Use it.
	(mxArray_struct::~mxArray_struct, mxArray_cell::~mxArray_cell):
	Delete elements with delete, not mxDestroyArray.
	(mex::cleanup): Don't call mex::free or mex::free_value.
	(mex::free_value): Add debug warning.
	(mex::mark, mex::unmark): Fix debug warning.
	(call_mex): Use unwind_protect frame.
	(mexUnlock): Use iterator to remove item from mex_lock_count.

	* octave.cc (maximum_braindamage): Use disable_warning instead of
	bind_internal_variable to disable function-name-clash warning.